Solve container margin on smaller screens.

--- a/extension/scripts/global/globalStyle.css
+++ b/extension/scripts/global/globalStyle.css
@@ -207,3 +207,15 @@
 	line-height: 22px;
 	margin-left: 8px;
 }
+
+.tt-container .content {
+	margin-top: initial !important;
+}
+
+.tt-container.rounding .content {
+	border-radius: 0 0 5px 5px;
+}
+
+.tt-container .content.background {
+	background-color: var(--default-bg-panel-color, #f2f2f2);
+}
